# bump

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml  release.yml
include/bump/: bump.h  fileutil.h  version.h
src/: main.c
src/bump/: bump.c  fileutil.c
test/cases/: expected.txt  input.txt
test/src/: run-tests.c
